Revision history for Dist-Zilla-Plugin-GitHubREADME-Badge

{{$NEXT}}

0.06  2014-11-05 10:00:08 CST
        - for a 'Failed: PAUSE indexer report'

0.05  2014-11-05 09:42:24 CST
        - under wrong PAUSE account

0.04  2014-11-05 09:26:04 CST
        - search with .md, .mkdn, .markdown (gh#1)

0.03  2014-09-22 19:43:33 CST
        - add args place (top or bottom)

0.02  2014-09-22 19:12:02 CST
        - pass to FAYLAND

0.01  2014-09-22 19:06:46 CST
        - Initial release